auth/k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - name: auth-container
        image: kubeflix-auth:v10
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 2
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
