auth/k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db-dep
spec:
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: auth-db-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: auth-db-storage
        persistentVolumeClaim:
          claimName: auth-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service
spec:
  selector:
    app: auth-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
